2014-01-28  Brady Eidson  <beidson@apple.com>

        Remove unneeded “WebCore::” prefixing in two .cpp files.

        Rubberstamped by Alexey Proskuryakov.

        * DatabaseProcess/IndexedDB/UniqueIDBDatabase.cpp:
        * DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:

2014-01-28  Tim Horton  <timothy_horton@apple.com>

        WebKit2 View Gestures (Swipe): Snapshots should be purgeable
        https://bugs.webkit.org/show_bug.cgi?id=127390
        <rdar://problem/15876775>

        Reviewed by Anders Carlsson.

        Make snapshots be purgeable, and implement a straightforward
        (if perhaps expensive, for now) cache eviction strategy to limit the
        number of snapshots to 20.

        * UIProcess/mac/ViewGestureController.mm:
        (WebKit::ViewGestureController::beginSwipeGesture):
        When beginning a gesture, attempt to make the retrieved snapshot
        non-volatile. If it was purged while volatile, we won't use it, but if it
        is still valid, we'll go ahead and use it as the swipe layer's contents.

        (WebKit::ViewGestureController::removeSwipeSnapshot):
        When removing the swipe snapshot, make it volatile once again.

        * UIProcess/mac/ViewSnapshotStore.h:
        Store a creation time along with the image.
        Store and return IOSurfaces instead of CGImages.
        Store snapshots and render tree sizes separately, so that we can
        throw away snapshots but keep the render tree sizes indefinitely.

        * UIProcess/mac/ViewSnapshotStore.mm:
        (WebKit::ViewSnapshotStore::pruneSnapshots):
        Cap the number of snapshots we'll ever have live at 20.
        Enforce this cap by first trying to remove snapshots farthest
        from the current back-forward list's current item, falling back
        to removing the least recently created snapshot if there are no
        snapshots owned by the current back-forward list.

        (WebKit::createIOSurfaceFromImage):